app/static/css/custom.css
/*
* v0.1.0
* Copyright 2016, Pavel Mamontov 
* pavelmamontov.com
* Free to use under the MIT license.
* http://www.opensource.org/licenses/mit-license.php
* 2016-02-17
*/


/* Table of contents
––––––––––––––––––––––––––––––––––––––––––––––––––
- General
- Style Guide
- Alerts 
- Images
- Layout 
- Navigation
- Progress Bar
- Input
- Tables
- Lists
- Code
- Animations
*/


/* General
–––––––––––––––––––––––––––––––––––––––––––––––––– */
html, body {
    height: 100%;
}
small {
    color: #ccc;
}

/* Alerts 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.flash {
    display: block;
    border: 1px solid;
    border-radius: 4px;
    padding: 15px;
    margin-bottom: 20px;
    animation: slide-down 0.3s cubic-bezier(.22,.61,.36,1) forwards;
    /*animation: fade-in 0.5s;*/
}
.label,
.help-block {
    display: inline;
    padding: 0.2em 0.6em 0.3em;
    font-size: 75%;
    font-weight: 300;
    line-height: 1;
    text-align: center;
    white-space: nowrap;
    vertical-align: baseline;
    border-radius: 0.25em;
}
.primary {
    background-color: #0399AE;
    border-color: 034953;
}
.success,
.good {
    color: #3C763D;
    background-color: #DFF0D8;
    border-color: #D6E9C6;
}
.warning,
.unknown {
    color: #8A6D3B;
    background-color: #FCF8E3;
    border-color: #FAEBCC;   
}
.danger,
.bad,
.error {
    color: #A94442;
    background-color: #F3DEDE;
    border-color: #EBCCD1;
}


/* Images
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.img-circle {
    border-radius: 50%; 
} 
.avatar-sm {
    border-radius: 33%;
    display:inline-block;
    width:32px; 
    height:32px; 
    background-color:#ccc; 
    color: #fff;
    font-weight: 600;
    text-align: center;
    line-height: 2.1em;
    text-decoration: none;
}
.icon-social {
    width:2em;
    height:2em;
}
.icon-demand {
    height: 32px;
    margin-top: 7px;
}

    
/* Layout 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.header {
    display: block;
    position: fixed;
    top: 0px;
    z-index: 100;
    width: 100%;
    height: 6.5rem;
    background: #fff;
    border-bottom: 1px solid #eee;
}
.progress {
    display: block;
    height: 6.5rem;
    border-bottom: 2px solid #33C3F0;
    transition: width 0.5s ease-out;
}
.header .logo {
    width: 5rem;
    height: 5rem;
    margin: 0.7rem 1rem 0 0;
}
.header .title,
.header .button {
    margin-top: 1.2rem;
}
.content {
    margin-top: 9rem;
}
.support-action {
    display: block;
    border: 1px solid #bbb;
    border-radius: 4px;
    margin-top: 1em;
    padding: 0.5em 1em;
    color: #555;
}
.support-action:hover {
    border-color: #888;
    color: #333;
    cursor: pointer;
}
.support-action p {
    font-size: 12px;
}
.footer {
    display: block;
    width: 100%;
    margin-top: 3rem;
    padding: 3rem 0;
    background: #222;
    color: #fff;
}
.footer a {
    text-decoration: none;
}
.footer a:hover {
    text-decoration: underline;
}
.footer ul li {
    list-style-type: none;
}


/* Navigation 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
#scrollspy {
    display: inline-block;
}
.nav-tabs-container {
    border-bottom: 1px solid #eee;
    margin-bottom: 1em;
}
.nav-stacked-fixed {
    position: fixed;
    top: 6em;
}
.nav {
    padding-left: 0;
    margin-bottom: 0;
    margin-left: 0;
    list-style: none;
    display: inline-block;
}
.nav > li {
    position: relative;
    display: block;
}
.nav > li > a {
    position: relative;
    display: block;
    padding: 10px 10px;
}
.nav > li > a:hover,
.nav > li > a:focus {
    text-decoration: none;
    background-color: #f8f8f8;
}
.nav > li.disabled > a {
    color: #777;
}
.nav > li.disabled > a:hover,
.nav > li.disabled > a:focus {
    color: #777;
    text-decoration: none;
    cursor: not-allowed;
    background-color: transparent;
}
.nav-stacked {
    width: 100%;
}
.nav-tabs > li {
    float: left;
    margin-bottom: -3px;
}
.nav-tabs > li > a {
    line-height: 2.8;
    height: 4.5rem;
    text-decoration: none;
}

.nav-stacked > li > a {
    line-height: 1.8;
    height: 2.5rem;
    text-decoration: none;
}
.nav-tabs > li > a:hover
.nav-stacked > li > a:hover {
    color: #0fa0ce;
}
.nav-tabs > li.active > a,
.nav-tabs > li.active > a:hover,
.nav-tabs > li.active > a:focus {
    font-weight: 600;
    background-color: #fff;
    border-bottom-style: solid;
    border-bottom-color: #1EAEDB;
    border-radius: 3px;
}
.nav-stacked > li.active > a,
.nav-stacked > li.active > a:hover,
.nav-stacked > li.active > a:focus {
    font-weight: 600;
    margin-right: 0;
    margin-left: 0;
    background-color: #fff;
    border-left-style: solid;
    border-left-color: #1EAEDB;
}
.nav-tabs.nav-horizontal > li.active > a,
.nav-tabs.nav-horizontal > li.active > a:hover,
.nav-tabs.nav-horizontal > li.active > a:focus, 
.nav-stacked.nav-horizontal > li.active > a,
.nav-stacked.nav-horizontal > li.active > a:hover,
.nav-stacked.nav-horizontal > li.active > a:focus {
    border-width: 3px;
}
.nav-tabs.nav-secondary > li.active > a,
.nav-tabs.nav-secondary > li.active > a:hover,
.nav-tabs.nav-secondary > li.active > a:focus,
.nav-stacked.nav-secondary > li.active > a,
.nav-stacked.nav-secondary > li.active > a:hover,
.nav-stacked.nav-secondary > li.active > a:focus {
    border-width: 1px;
}
.nav-social img {
    margin-top: 0.5em;
}


/* Progress Bar
–––––––––––––––––––––––––––––––––––––––––––––––––– */
/*
.progressbar {
    counter-reset: step;
}
.progressbar li {
    list-style-type: none;
    float: left;
    width: 33.33%;
    position: relative;
    text-align: center;
}
.progressbar li:before {
    content: counter(step);
    counter-increment: step;
    width: 30px;
    height: 30px;
    line-height: 30px;
    border: 1px solid #eee;
    display: block;
    text-align: center;
    margin: 0 auto 10px auto;
    border-radius: 50%;
    background-color: white;
}
/* ... */

